<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:gravity="center"
	tools:context="kr.KENNYSOFT.Udacity.Project0.MainActivity">

	<RelativeLayout
		android:layout_width="240dp"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/main_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:gravity="center_horizontal"
			android:text="@string/main_text"/>

		<Button
			android:id="@+id/btn1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/main_text"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:background="#2E3D49"
			android:textColor="#FFFFFF"
			android:text="@string/btn1"/>

		<Button
			android:id="@+id/btn2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn1"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:background="#2E3D49"
			android:textColor="#FFFFFF"
			android:text="@string/btn2"/>

		<Button
			android:id="@+id/btn3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn2"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:textColor="#FFFFFF"
			android:background="#2E3D49"
			android:text="@string/btn3"/>

		<Button
			android:id="@+id/btn4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn3"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:textColor="#FFFFFF"
			android:background="#2E3D49"
			android:text="@string/btn4"/>

		<Button
			android:id="@+id/btn5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn4"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:textColor="#FFFFFF"
			android:background="#2E3D49"
			android:text="@string/btn5"/>

		<Button
			android:id="@+id/btn6"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn5"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:background="#2E3D49"
			android:textColor="#FFFFFF"
			android:text="@string/btn6"/>

	</RelativeLayout>

</RelativeLayout>
